--- a/index.html
+++ b/index.html
@@ -1,29 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Lunch Checker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <style>
-      .message { font-size: 1.3em; font-weight: bold; }
-    </style>
-  </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
 
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
-         </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-         </div>
-   </div>
+<head>
+  <title>Lunch Checker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <style>
+    .message {
+      font-size: 1.3em;
+      font-weight: bold;
+      width: 500px;
+      padding: 5px;
+    }
+    .valid {
+      color: green;
+      border-color: green;
+      border: 1px solid;
+    }
+    .invalid {
+      color: red;
+      border-color: red;
+      border: 1px solid;
+    }
+  </style>
+</head>
 
+<body ng-app="LunchCheck">
+  <div class="container" ng-controller="LunchCheckController">
+    <h1>Lunch Checker</h1>
+
+    <h4>
+      <strong>Note:</strong> This progam does NOT consider an empty item
+      (<code>, ,</code>), as an item towards the count
+    </h4>
+
+    <div class="form-group">
+      <input id="lunch-menu"
+             autofocus
+             class="form-control" 
+             type="text"
+             ng-model="lunchItems"
+             placeholder="list comma separated dishes you usually have for lunch" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-default" ng-click="displayResult()">
+        Check If Too Much
+      </button>
+    </div>
+    <div class="form-group message {{validationClass}}">
+      {{ result.msg }}
+    </div>
+  </div>
+
+  <script src="js/angular.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
